--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -7,6 +7,7 @@
   roles:
   - role: install-depend
   - role: system-tuning
+  - role: router-tuning
   - role: network
     network_ifaces:
     - device: bond0
@@ -91,6 +92,8 @@
   become: true
   gather_facts: False
   roles:
+  - role: system-tuning
+  - role: router-tuning
   - role: network
     network_ifaces:
     - device: bond0
@@ -107,8 +110,6 @@
       networkmanager: "no"
       ipv6init: no
       bondmaster: bond0
-  # - role: install-depend
-  - role: system-tuning
   tasks:
   # - name: Remove team0
   #   ansible.builtin.nmcli:
@@ -157,7 +158,7 @@
   gather_facts: False
   ignore_errors: true
   roles:
-    # - role: install-depend
+    - role: system-tuning
     - role: network
       network_ifaces:
       - device: eth1
@@ -179,7 +180,7 @@
   gather_facts: False
   ignore_errors: true
   roles:
-    # - role: install-depend
+    - role: system-tuning
     - role: network
       network_ifaces:
       - device: eth1
@@ -201,7 +202,7 @@
   gather_facts: False
   ignore_errors: true
   roles:
-    # - role: install-depend
+    - role: system-tuning
     - role: network
       network_ifaces:
       - device: eth1
@@ -223,7 +224,7 @@
   gather_facts: False
   ignore_errors: true
   roles:
-    # - role: install-depend
+    - role: system-tuning
     - role: network
       network_ifaces:
       - device: eth1
