--- a/ansible/roles/system-tuning/tasks/main.yml
+++ b/ansible/roles/system-tuning/tasks/main.yml
@@ -1,17 +1,4 @@
 ---
-# Включаем маршрутизацию транзитных пакетов
-- name: Setup forward net.ipv4.conf.all.forwarding
-  ansible.builtin.sysctl:
-    name: net.ipv4.conf.all.forwarding
-    value: "1"
-    sysctl_set: yes
-    state: present
-    reload: yes
-
-- name: Setup forward net.ipv4.ip_forward
-  ansible.builtin.sysctl:
-    name: net.ipv4.ip_forward
-    value: '1'
-    sysctl_set: yes
-    state: present
-    reload: yes
+- name: Disable ZORECONFIG
+  shell: |
+    echo NOZEROCONF=yes >> /etc/sysconfig/network
