--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -12,7 +12,7 @@
     network_ifaces:
     - device: bond0
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       ip: 192.168.255.2
       gateway: 192.168.255.1
       dns1: 8.8.8.8
@@ -20,25 +20,25 @@
       bondmaster: bond0
     - device: eth1
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       bondmaster: bond0
     - device: eth2
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       bondmaster: bond0
     - device: eth3
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
     - device: eth3.100
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       network_additional_params:
         hysdev: eth3
         vlan_id: "100"
         vlan: "yes"
     - device: eth3.101
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       network_additional_params:
         hysdev: eth3
         vlan_id: "101"
@@ -100,17 +100,17 @@
     network_ifaces:
     - device: bond0
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       ip: 192.168.255.1
       prefix: 30
       bondmaster: bond0
     - device: eth1
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       bondmaster: bond0
     - device: eth2
       networkmanager: "no"
-      ipv6init: no
+      ipv6init: "no"
       bondmaster: bond0
   tasks:
   # - name: Remove team0
@@ -161,14 +161,15 @@
   ignore_errors: true
   roles:
     - role: system-tuning
+    - role: tools
     - role: network
       network_ifaces:
       - device: eth1
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
       - device: vlan100
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
         ip: 10.10.10.254
         prefix: 24
         network_additional_params:
@@ -183,14 +184,15 @@
   ignore_errors: true
   roles:
     - role: system-tuning
+    - role: tools
     - role: network
       network_ifaces:
       - device: eth1
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
       - device: vlan100
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
         ip: 10.10.10.1
         prefix: 24
         network_additional_params:
@@ -205,14 +207,15 @@
   ignore_errors: true
   roles:
     - role: system-tuning
+    - role: tools
     - role: network
       network_ifaces:
       - device: eth1
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
       - device: vlan101
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
         ip: 10.10.10.1
         prefix: 24
         network_additional_params:
@@ -227,14 +230,15 @@
   ignore_errors: true
   roles:
     - role: system-tuning
+    - role: tools
     - role: network
       network_ifaces:
       - device: eth1
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
       - device: vlan101
         networkmanager: "no"
-        ipv6init: no
+        ipv6init: "no"
         ip: 10.10.10.254
         prefix: 24
         network_additional_params:
